# tinylog-agent

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  start_tinylog_monitor.sh  start_vm_monitor.sh
tinylog/: __init__.py  detector.py  investigator.py  normalizer.py  reasoner.py  reporter.py  reviewer.py  schemas.py  tailer.py
tinylog/backends/: llamacpp_client.py  ollama_client.py
